--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         </div>
         <div class="nav-header-two">
             <nav class="nav-right-section">
-                <span class="icon-menu-ntfc"></span>
+                <span class="icon-menu-ntfc">
+                    <span class="icon-button-notifications">98</span>
+                </span>
                 <span class="icon-message"></span>
                 <span class="icon-user">
                     <img src="img/user.jpg" alt="user"/>
