--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="nav-header-two">
             <nav class="nav-right-section">
                 <span class="icon-menu-ntfc">
-                    <span class="icon-button-notifications">98</span>
+                    <a data-notify="100"></a>
                 </span>
                 <span class="icon-message"></span>
                 <span class="icon-user">
@@ -58,10 +58,8 @@
                 <span class="icon-right">
                     <i class="fa fa-chevron-down" aria-hidden="true"></i>
                 </span>
-
             </nav>
         </div>
-
     </header>
     <main>
         <div class="main-row">
